More Biology Notes

--- a/html/biology/index.html
+++ b/html/biology/index.html
@@ -526,7 +526,7 @@
       <h2>Outline</h2>
       <ol style="list-style-type: none">
         <li>
-          <div><a href="#loc-1"><span class="prefix">1.</span> BioChemistry</a></div>
+          <div><a href="#loc-1"><span class="prefix">1.</span> Biochemistry</a></div>
           <ol style="list-style-type: none">
             <li><a href="#loc-2"><span class="prefix">1.1.</span> Basics</a></li>
             <li><a href="#loc-3"><span class="prefix">1.2.</span> Amino Acids, Peptides and Proteins</a></li>
@@ -537,7 +537,7 @@
       </ol>
     </nav>
     <div id="loc-1" style>
-      <h2>1. BioChemistry</h2>
+      <h2>1. Biochemistry</h2>
     </div>
     <div id="loc-2" style>
       <h3>1.1. Basics</h3>
