--- a/html/biology/index.html
+++ b/html/biology/index.html
@@ -535,6 +535,7 @@
             <li><a href="#loc-6"><span class="prefix">1.5.</span> Nucleic Acids</a></li>
           </ol>
         </li>
+        <li><a href="#loc-7"><span class="prefix">2.</span> Cells</a></li>
       </ol>
     </nav>
     <div id="loc-1" style>
@@ -543,18 +544,16 @@
     <div id="loc-2" style>
       <h3>1.1. Basics</h3>
     </div>
-    <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
-        <div style="column-count: 2; column-gap: 2em;">
-          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Covalent Bond</strong></div>
-          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.1</strong></div>
-        </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+      <div style="column-count: 2; column-gap: 2em;">
+        <div style="text-align: left;vertical-align: text-top" class="align"><strong>Covalent Bond</strong></div>
+        <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.1</strong></div>
       </div>
-      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">
-        <p>Strong bonds formed by sharing electrons to fill valence shells. Typically, Carbon can form four, Nitrogen 3, and Oxygen 2. For Nitrogen and Oxygen the valence electrons that don’t participate in a covalent bond will pair off to form a lone pair.</p>
-        <p>Nitrogen and Oxygen commonly bond with lone protons. If this happens Oxygen can form 1 or 3 covalent bonds, and Nitrogen can form 4.</p>
-        <p>Sulfur essentially copies Oxygen. Phosphorus commonly appears in forms with 5 covalent bonds to Oxygen.</p>
-      </div>
+    </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">
+      <p>Strong bonds formed by sharing electrons to fill valence shells. Typically, Carbon can form four, Nitrogen 3, and Oxygen 2. For Nitrogen and Oxygen the valence electrons that don’t participate in a covalent bond will pair off to form a lone pair.</p>
+      <p>Nitrogen and Oxygen commonly bond with lone protons. If this happens Oxygen can form 1 or 3 covalent bonds, and Nitrogen can form 4.</p>
+      <p>Sulfur essentially copies Oxygen. Phosphorus commonly appears in forms with 5 covalent bonds to Oxygen.</p>
     </div>
     <p>Here are the most common functional groups.</p>
     <table>
@@ -608,32 +607,28 @@
         <td>Hydroxide + Carboxyl = Ester</td>
       </tr>
     </table>
-    <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
-        <div style="column-count: 2; column-gap: 2em;">
-          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Non-Covalent Bond</strong></div>
-          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.2</strong></div>
-        </div>
-      </div>
-      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">
-        <p>Weaker bonds that can be formed and broken much more readily. These are what facilitate “dynamic” systems.</p>
-        <ol>
-          <li>Ionic bonds are formed when you have two oppositely charged things (2-10 kcal/mol).</li>
-          <li>Hydrogen bonds when a hydrogen atom bonded to an electronegative element (Oxygen, Nitrogen, Sulfur) interacts with a lone electron pair (3-7 kcal/mol).</li>
-          <li>Hydrophobic bonds are the tendency for non-polar substances to group together in the presence of water (think oil). Why this happens isn’t understood too well (1-2 kcal/mol).</li>
-          <li>Van der Waals bonds are just the tiny forces you get from weakly polarized bonds (1 kcal/mol).</li>
-        </ol>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+      <div style="column-count: 2; column-gap: 2em;">
+        <div style="text-align: left;vertical-align: text-top" class="align"><strong>Non-Covalent Bond</strong></div>
+        <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.2</strong></div>
       </div>
     </div>
-    <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
-        <div style="column-count: 2; column-gap: 2em;">
-          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Lipids</strong></div>
-          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.3</strong></div>
-        </div>
-      </div>
-      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">Chemical structures rich in C-C and C-H bonds. Because they primarily have C-H bonds, they can’t Hydrogen bond and are hydrophobic. They’re used a lot for energy storage (one reason being they don’t attract water molecules, allowing them to attain higher energy densities) and insulation (because they repel water which is good at transferring heat). Notable examples are fats, some vitamins, cholesterol, and cell membranes.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">
+      <p>Weaker bonds that can be formed and broken much more readily. These are what facilitate “dynamic” systems.</p>
+      <ol>
+        <li>Ionic bonds are formed when you have two oppositely charged things (2-10 kcal/mol).</li>
+        <li>Hydrogen bonds when a hydrogen atom bonded to an electronegative element (Oxygen, Nitrogen, Sulfur) interacts with a lone electron pair (3-7 kcal/mol).</li>
+        <li>Hydrophobic bonds are the tendency for non-polar substances to group together in the presence of water (think oil). Why this happens isn’t understood too well (1-2 kcal/mol).</li>
+        <li>Van der Waals bonds are just the tiny forces you get from weakly polarized bonds (1 kcal/mol).</li>
+      </ol>
     </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+      <div style="column-count: 2; column-gap: 2em;">
+        <div style="text-align: left;vertical-align: text-top" class="align"><strong>Lipids</strong></div>
+        <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.3</strong></div>
+      </div>
+    </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Chemical structures rich in C-C and C-H bonds. Because they primarily have C-H bonds, they can’t Hydrogen bond and are hydrophobic. They’re used a lot for energy storage (one reason being they don’t attract water molecules, allowing them to attain higher energy densities) and insulation (because they repel water which is good at transferring heat). Notable examples are fats, some vitamins, cholesterol, and cell membranes.</div>
     <p>An important terminology with lipids is saturated and unsaturated. Saturated lipids have no carbon-carbon double bonds, and unsaturated lipids have at least one such bond. Double-bonds are very strong and rigid, and greatly affect the geometry of the lipid.</p>
     <div style="text-align: center;vertical-align: text-top" class="align">
       <table>
@@ -648,24 +643,20 @@
       </table>
     </div>
     <p>When the Hydrogens are on the same side, this is called a cis-lipid, and when they’re on opposite sides it’s called a trans-lipid. The close-by hydrogen atoms of the cis-lipid cause a kink to form in the lipid, which makes it a lot harder for Van der Waal forces to keep strands of such lipids together. For this reason, unsaturated lipids are typically not solids at room temperature whereas saturated lipids are.</p>
-    <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
-        <div style="column-count: 2; column-gap: 2em;">
-          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Phospholipids</strong></div>
-          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.4</strong></div>
-        </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+      <div style="column-count: 2; column-gap: 2em;">
+        <div style="text-align: left;vertical-align: text-top" class="align"><strong>Phospholipids</strong></div>
+        <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.4</strong></div>
       </div>
-      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">These guys have one of the phosphate groups at their head, with a non-polar lipid tail. Put them in water, and you will quickly end up with Bilayer, where the heads form the exterior and the hydrophobic tail forms the interior.</div>
     </div>
-    <div style>
-      <div style="position: relative; margin-top:8pt; margin-bottom:4pt;">
-        <div style="column-count: 2; column-gap: 2em;">
-          <div style="text-align: left;vertical-align: text-top" class="align"><strong>Fatty Acids</strong></div>
-          <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.5</strong></div>
-        </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">These guys have one of the phosphate groups at their head, with a non-polar lipid tail. Put them in water, and you will quickly end up with Bilayer, where the heads form the exterior and the hydrophobic tail forms the interior.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+      <div style="column-count: 2; column-gap: 2em;">
+        <div style="text-align: left;vertical-align: text-top" class="align"><strong>Fatty Acids</strong></div>
+        <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.5</strong></div>
       </div>
-      <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 8pt; padding-bottom: 8pt; background: #edf1d6; border-radius:4pt; border-color: #609966; border-width: 2pt; border-style: solid; position: relative; margin-top:4pt;">These molecules consist of a long hydro-phobic tail (C-C and C-H bonds) with a hydrophilic head. These include things like Trans-Fats and Cis-Fats (like Monounsaturated and Polyunsaturated Fats).</div>
     </div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">These molecules consist of a long hydro-phobic tail (C-C and C-H bonds) with a hydrophilic head. These include things like Trans-Fats and Cis-Fats (like Monounsaturated and Polyunsaturated Fats).</div>
     <div style>
       <h4>1.1.1. Why are Trans and Saturated Fats Bad?</h4>
     </div>
@@ -805,5 +796,8 @@
         <td>Found in a million different forms (active, protein building)</td>
       </tr>
     </table>
+    <div id="loc-7" style>
+      <h2>2. Cells</h2>
+    </div>
   </body>
 </html>
