--- a/html/biology/index.html
+++ b/html/biology/index.html
@@ -554,13 +554,13 @@
     <div id="loc-2" style>
       <h3>1.1. Basics</h3>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Covalent Bond</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.1</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">
       <p>Strong bonds formed by sharing electrons to fill valence shells. Typically, Carbon can form four, Nitrogen 3, and Oxygen 2. For Nitrogen and Oxygen the valence electrons that don’t participate in a covalent bond will pair off to form a lone pair.</p>
       <p>Nitrogen and Oxygen commonly bond with lone protons. If this happens Oxygen can form 1 or 3 covalent bonds, and Nitrogen can form 4.</p>
       <p>Sulfur essentially copies Oxygen. Phosphorus commonly appears in forms with 5 covalent bonds to Oxygen.</p>
@@ -617,13 +617,13 @@
         <td>Hydroxide + Carboxyl = Ester</td>
       </tr>
     </table>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Non-Covalent Bond</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.2</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">
       <p>Weaker bonds that can be formed and broken much more readily. These are what facilitate “dynamic” systems.</p>
       <ol>
         <li>Ionic bonds are formed when you have two oppositely charged things (2-10 kcal/mol).</li>
@@ -632,13 +632,13 @@
         <li>Van der Waals bonds are just the tiny forces you get from weakly polarized bonds (1 kcal/mol).</li>
       </ol>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Lipids</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.3</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Chemical structures rich in C-C and C-H bonds. Because they primarily have C-H bonds, they can’t Hydrogen bond and are hydrophobic. They’re used a lot for energy storage (one reason being they don’t attract water molecules, allowing them to attain higher energy densities) and insulation (because they repel water which is good at transferring heat). Notable examples are fats, some vitamins, cholesterol, and cell membranes.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">Chemical structures rich in C-C and C-H bonds. Because they primarily have C-H bonds, they can’t Hydrogen bond and are hydrophobic. They’re used a lot for energy storage (one reason being they don’t attract water molecules, allowing them to attain higher energy densities) and insulation (because they repel water which is good at transferring heat). Notable examples are fats, some vitamins, cholesterol, and cell membranes.</div>
     <p>An important terminology with lipids is saturated and unsaturated. Saturated lipids have no carbon-carbon double bonds, and unsaturated lipids have at least one such bond. Double-bonds are very strong and rigid, and greatly affect the geometry of the lipid.</p>
     <div style="text-align: center;vertical-align: text-top" class="align">
       <table>
@@ -653,20 +653,20 @@
       </table>
     </div>
     <p>When the Hydrogens are on the same side, this is called a cis-lipid, and when they’re on opposite sides it’s called a trans-lipid. The close-by hydrogen atoms of the cis-lipid cause a kink to form in the lipid, which makes it a lot harder for Van der Waal forces to keep strands of such lipids together. For this reason, unsaturated lipids are typically not solids at room temperature whereas saturated lipids are.</p>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Phospholipids</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.4</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">These guys have one of the phosphate groups at their head, with a non-polar lipid tail. Put them in water, and you will quickly end up with Bilayer, where the heads form the exterior and the hydrophobic tail forms the interior.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">These guys have one of the phosphate groups at their head, with a non-polar lipid tail. Put them in water, and you will quickly end up with Bilayer, where the heads form the exterior and the hydrophobic tail forms the interior.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Fatty Acids</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 1.1.5</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">These molecules consist of a long hydro-phobic tail (C-C and C-H bonds) with a hydrophilic head. These include things like Trans-Fats and Cis-Fats (like Monounsaturated and Polyunsaturated Fats).</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">These molecules consist of a long hydro-phobic tail (C-C and C-H bonds) with a hydrophilic head. These include things like Trans-Fats and Cis-Fats (like Monounsaturated and Polyunsaturated Fats).</div>
     <div style>
       <h4>1.1.1. Why are Trans and Saturated Fats Bad?</h4>
     </div>
@@ -851,20 +851,20 @@
       <li>Higher error rate.</li>
     </ol>
     <p>Transcription is shortly followed by a few other processes.</p>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>5′ Capping</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 2.3.1</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Soon after the RNA is synthesized, a certain molecule is attached to its 5′ end. This essentially marks the RNA as mRNA, so enzymes (such as Exonuclease) will know to handle it differently.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">Soon after the RNA is synthesized, a certain molecule is attached to its 5′ end. This essentially marks the RNA as mRNA, so enzymes (such as Exonuclease) will know to handle it differently.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>3′ Polyadenylation</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 2.3.2</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">
       <p>On the other side of the RNA, a bunch of Adenine molecules are added. Why?</p>
       <ul>
         <li>Safeguards the cell from Exonuclease (makes it target the As instead of coding RNA).</li>
@@ -872,13 +872,13 @@
         <li>Marks the mRNA as something that should leave the Nucleus.</li>
       </ul>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Splicing</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 2.3.3</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">
       <p>Now, a bunch of genetic material is removed from the mRNA. The pieces that are removed are called introns, and the pieces that are removed are called exons.</p>
       <ul>
         <li>This greatly increases the diversity of proteins a sequence of DNA can encode for.</li>
@@ -896,27 +896,27 @@
     <div id="loc-12" style>
       <h3>2.5. Translation</h3>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Codon</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 2.5.4</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">A sequence of three letters of RNA. Each sequence encodes one Amino acid. There are also codons to encode where translation should start and where it should stop.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">A sequence of three letters of RNA. Each sequence encodes one Amino acid. There are also codons to encode where translation should start and where it should stop.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>tRNA</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 2.5.5</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Pre-existing molecular adaptors which carry Amino acids. One end attaches to an Amino acid, the other end has what is called an Anti-Codon which allows it to attach to the relevant piece of RNA.</div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:8pt;">
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">Pre-existing molecular adaptors which carry Amino acids. One end attaches to an Amino acid, the other end has what is called an Anti-Codon which allows it to attach to the relevant piece of RNA.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 4pt; padding-bottom: 4pt; background: #9bc656; border-top-left-radius: 4pt; border-top-right-radius: 4pt; position: relative; margin-top:16pt;">
       <div style="column-count: 2; column-gap: 2em;">
         <div style="text-align: left;vertical-align: text-top" class="align"><strong>Ribosomes</strong></div>
         <div style="text-align: right;vertical-align: text-top" class="align"><strong>Definition 2.5.6</strong></div>
       </div>
     </div>
-    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt;">Made up of rRNA, these complexes translate RNA to Proteins.</div>
+    <div style="padding-left: 8pt; padding-right: 8pt; padding-top: 2pt; padding-bottom: 4pt; background: #edf1d6; border-bottom-left-radius: 4pt; border-bottom-right-radius: 4pt; position: relative; margin-top:0pt; margin-bottom:16pt;">Made up of rRNA, these complexes translate RNA to Proteins.</div>
     <p>The process looks like this. Part of the Ribosome finds a start codon and latches on. Then the tRNA that corresponds to the start codon latches onto this. Finally, the top half of the Ribosome latches onto <em>this</em>. Then, tRNA molecules keep floating around and bumping into the Ribosome. Only the tRNA with the appropriate anti-codon is able to bind to the RNA and donate its amino acid to the new protein. This continues on until you reach an end codon. At this point either a protein release factor is bound or a suppressor tRNA, in either case stopping the process.</p>
     <div id="loc-13" style>
       <h2>3. Cells</h2>
