--- a/html/biology/index.html
+++ b/html/biology/index.html
@@ -836,13 +836,14 @@
     <div id="loc-9" style>
       <h3>2.2. Replication Accuracy</h3>
     </div>
-    <p>DNA replication in Eukaryotes is remarkably accurate. DNA Polymerase actually can check if the previous base pair is wrong, and if so remove it!</p>
+    <p>DNA replication in Eukaryotes is remarkably accurate. DNA Polymerase actually can check if the previous base pair is wrong, and if so remove it, thanks to Exonuclease!</p>
     <p>This increase in accuracy comes with a cost in speed. DNA in Eukaryotes is transcribed about 30-50 base pairs per second, whereas Bacteria can do about 1000 base pairs per second. Eukaryotes retain the accuracy of this process while speeding it up by starting in many places at once.</p>
     <p>Furthermore, Eukaryotes have very sophisticated mechanisms to repair broken DNA e.g. from radiation, chemicals, etc. These are called the <strong>Guardians of the Genome</strong>. In all cases it involves some enzyme to cleave out mistakes, plus DNA polymerase and ligase to clean things up afterward.</p>
     <ol>
-      <li>Glycosylase can remove bad bases at arbitrary points in DNA.</li>
-      <li>Radiation can cause Thymine to bond with itself on the same strand. Exonuclease fixes this by cutting out a large portion of the strand (12 BPs) as that is about how far the structural damage extends.</li>
+      <li>Glycosylase can remove bad bases at arbitrary points in DNA. This is part of Nucleotide Excision Repair (NER).</li>
+      <li>Radiation can cause Thymine to bond with itself on the same strand. Endonuclease (note that this is different from Exonuclease, which only acts on the ends) fixes this by making two cuts around a small portion of the strand (~12 BPs) containing the bonded thymines, cutting it out and letting other enzymes patch things.</li>
     </ol>
+    <p>Without these repair mechanisms, you quickly begin to accumulate mutations. For example, people who have Xeroderma Pigmentosum cannot perform NER. This gives them a 1000x chance of getting skin cancer with sunlight exposure.</p>
     <div id="loc-10" style>
       <h3>2.3. Transcription</h3>
     </div>
