--- a/html/biology/index.html
+++ b/html/biology/index.html
@@ -550,6 +550,7 @@
           <ol style="list-style-type: none">
             <li><a href="#loc-14"><span class="prefix">3.1.</span> Genetics</a></li>
             <li><a href="#loc-15"><span class="prefix">3.2.</span> Genetic Engineering</a></li>
+            <li><a href="#loc-16"><span class="prefix">3.3.</span> Cellular Trafficking</a></li>
           </ol>
         </li>
       </ol>
@@ -1009,6 +1010,9 @@
     <div style>
       <h4>3.2.4. Sequencing</h4>
     </div>
-    <p><strong>TODO</strong>: Sanger Sequencing, Next Generation Sequencing, Single Nucleotide Polymorphism, Restriction Fragment Length Polymorphism, Gel Electrophoresis, Single Sequence Repeat</p>
+    <p><strong>TODO</strong>: Sanger Sequencing, Next Generation Sequencing, Single Nucleotide Polymorphism, Restriction Fragment Length Polymorphism, Gel Electrophoresis, Single Sequence Repeat, Positional Gene Cloning, Chromosome Walk, Retrovirus, Complementary DNA, Reverse Transcriptase, making a cDNA library, make flies sprout extra eyes</p>
+    <div id="loc-16" style>
+      <h3>3.3. Cellular Trafficking</h3>
+    </div>
   </body>
 </html>
