--- a/html/biology/index.html
+++ b/html/biology/index.html
@@ -1014,5 +1014,6 @@
     <div id="loc-16" style>
       <h3>3.3. Cellular Trafficking</h3>
     </div>
+    <p><strong>TODO</strong>: Targeting sequences, Post Translational Modification (PTMs), Lipidation, Phosphorolation, NLS + Importin, Signal Recognition Particle (SRP), Rough ER</p>
   </body>
 </html>
